# wl_keys

./: Cargo.toml  build.rs  flake.nix
eww/: eww.scss  eww.yuck
proto/: wl_keys.proto
src/: args.rs  config.rs  daemon.rs  ipc.rs  keyboard.rs  keycode.rs  keymap.rs  main.rs  msg.rs  ui.rs
wl_keys/: Cargo.toml
wl_keys/src/: daemon.rs  keyboard.rs  keycode.rs  main.rs  ui.rs
wl_keys_proto/: Cargo.toml
wl_keys_proto/proto/: wl_keys.proto
wl_keys_proto/src/: lib.rs
