[package]
name = "wl_keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
input-event-codes = "5.16"
memmap2 = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.8"
wayland-client = "0.30"
wayland-protocols = { version = "0.30", features = [ "client", "unstable" ] }
wayland-protocols-misc = { version = "0.1", features = [ "client" ] }

