[package]
name = "wl_keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
input-event-codes = "5.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = [ "client", "unstable" ] }
wayland-protocols-misc = { version = "0.2", features = [ "client" ] }

