[package]
name = "wl_keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
once_cell = "1.18"
tokio = { version = "1.32", features = [ "macros", "rt-multi-thread", "signal" ] }

tonic = "0.10"
# This is not directly used, but required either way
prost = "0.12"

input-event-codes = "5.16"

wayland-client = "0.31"
wayland-protocols-misc = { version = "0.2", features = [ "client" ] }

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.10"

